--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <button id="feladat1">Feladat1</button>
 
     <ul id="list"></ul>
-    
+
+    <button id="feladat2">Feladat2</button>
+
+    <table id="tabla">
+        <tr>
+            <td>Username</td>
+            <td>E-mail</td>
+            <td>Phone number</td>
+        </tr>
+    </table>
+
 </body>
 </html>
